<resources>
  <string name="app_name">MyTinerary App</string>
  <string name="title_activity_nav">NavActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">MyTinerary</string>
  <string name="nav_header_subtitle">Welcome!</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_cities">Cities</string>
  <string name="menu_login">Login</string>
  <string name="menu_favs">Favourites</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Settings</string>
  <string name="title_activity_home">HomeActivity</string>
  <string name="title_activity_login">Sign in</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="title_activity_create_account">Sign in</string>
  <string name="title_activity_city_map">Map</string>
</resources>
